# nr-bcap

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  LICENSE  MANIFEST.in  README.QGIS.md  README.md  README.vite.md  docker-compose.yml  dot.env.j2  gettext.config.js  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.mts  vitest.setup.mts
.github/: github_env  github_settings.py
.github/ISSUE_TEMPLATE/: -decision-.md  bug_report.md  epic.md  feature-story.md  task.md  user-story.md
.github/actions/build-and-test-branch/: action.yml
.github/workflows/: main.yml  move_issues_to_qa.yml  release_deploy.yml  release_prep.yml
bcap/: __init__.py  apps.py  celery.py  context_processors.py  hosts.py  settings.py  sql_config.py  urls.py  wsgi.py
bcap/datatypes/: borden_number_datatype.py
bcap/functions/: bcap_site_descriptors.py  bcap_site_submission_descriptors.py  bcrhp_site_descriptors.py  bcrhp_site_submission_descriptors.py  restricted_site_access.py  site_visit_descriptors.py
bcap/management/commands/: bc_reindex_database.py  bc_test_users.py  (+4 more)
bcap/middleware/: vite_inject.py
bcap/migrations/: 0001_initial.py  0001a_update_active_languages.py  0001b_update_map_filter_config.py  0001c_create_map_attribute_data_function.py  0001d_fix_relational_views_for_reference_datatypes.py  0002_add_test_users.py  0002_alter_crhpexportdata_table.py  0002_load_package.py  0003_add_test_users.py  0003_initial.py  0004_initial.py  0004_load_common_map_layers.py  0004_update_basemap.py  0005_update_basemap.py  0619_alter_file_path_length.py  0620_alter_instance_view_update_function.py  1031_add_borden_number_counter_model.py  1032_update_map_filter_config.py  1036_update_heritage_site_export_config.py  1075_fix_null_sortorder.py  1081_add_missing_featureids.py  1081_recreate_materialized_views.py  1100_show_etl_plugin_by_default.py  1111_add_missing_submission_documents_config.py  1182a_add_translate_to_resource_type.py  1182b_add_resource_ids_filter.py  1182c_add_cross_model_advanced_search.py  1200_add_translate_to_resource_type.py  1290_add_plugin.py  1300_add_ids_filter_search_component.py  1300_add_resource_ids_filter.py  1400_add_cross_model_advanced_search.py  665_6_correct_public_internal_map_layers.py  694_2_apply_restricted_site_access_function.py  694_3_set_initial_permissions.py  855_add_qgis_views.py  893_2_apply_admin_only_function.py  893_4_restrict_nodes_from_public.py  947_create_testing_table.py  947_historic_site_one_line.py  (+1 more)
bcap/models/: __init__.py  borden_number.py  crhp.py
bcap/releases/: 1.1.0.md  1.1.1.md  1.2.0.md  1.3.0.md
bcap/search/: arch_site_es_values.py  search_export.py
bcap/search_components/: cross_model_advanced_search.py  ids_filter.py  paging_filter.py  standard_search_view.py  term_filter.py  translate_to_resource_type_filter.py
bcap/tasks/: tasks.py
bcap/templates/: base-root.htm  index.htm  unauthorized.htm
bcap/tests/: base_test.py  run_tests.py  test_settings.py  test_urls.py
bcap/util/: bcap_aliases.py  bcrhp_aliases.py  borden_number_api.py  buisiness_permission_manager.py  business_data_proxy.py  context_processors.py  controlled_list.py  external_oauth_backend.py  graph.py  hria_db.py  mvt_tiler.py  register_type_api.py
bcap/views/: api.py  auth.py  crhp.py  resource.py  search.py
bcap/vite-entries/: bcap-site.entry.js  bcap-site.entry.ts  map.entry.js
bcap/widgets/: borden-number-widget.json  register-type-widget.json
cd/config/: default.yml  dlvr.yml  test.yml
cd/docker/: README.md  build_container.sh  run_deployment.sh
docker/: bcap-supervisor.conf  entrypoint.sh  env_file.env  settings_docker.py  settings_local.py
docker/conf.d/: bcap-celerybeat.conf  bcrhp-celeryd.conf
docker/nginx/: dev.conf  dev.targetted.conf  dev.vite.conf  dev.webpack.conf
docker/pg_featureserv/: pg_featureserv.env
docker/pg_tileserv/: Dockerfile  pg_tileserv.env
docker/production/: Dockerfile  entrypoint.sh  env_file.env
docker/webpack/: Dockerfile  entrypoint.sh  env_file.env
releases/: restore_database.md
tests/: runner.py  test_settings.py
tests/auth/: test_oauth_token_refresh_middleware.py  test_token_refresh.py  test_token_refresh2.py
tests/search_indexes/: sample_index_tests.py
tests/util/: test_borden_number_api.py  test_controlled_list.py
tests/views/: test_api.py
vite-shims/: backbone-global.js  bootstrap-empty-export.js  chosen-global.js  datatables-bootstrap.js  dropzone-default.js  dropzone-global.js  jquery-global.js  jquery-global.ts  knockout-global.js  knockout-mapping-global.js  knockout-patched.js  ko-register-guard.js  maplibre-gl-shim.ts  noop.js  underscore-global.js  underscore-global.ts  uuid-default.js
webpack/: webpack.common.js
webpack/webpack-utils/: build-filepath-lookup.js
(+311 files in other folders)
