[build-system]
requires = ["setuptools>=77", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bcap"
readme = "README.md"
authors = []
license = {text = "GNU AGPL3"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
]
requires-python = ">=3.11"
dependencies = [
    "arches>=8.0.2",
    "arches_component_lab",
    "bcgov_arches_common @ git+https://github.com/bcgov/bcgov-arches-common@brf/feat/214_upgrade_to_v8_take2",
    "arches_querysets",
    "arches-controlled-lists @ git+https://github.com/archesproject/arches-controlled-lists@main",
    "boto3==1.26",
    "django-migrate-sql-deux==1.1.1",
    "django-pgtrigger==4.15.2",
    "django-storages==1.13",
    "django-vite",
    "redis",
    "python-dotenv",
    "oracledb",
    "html2text",
    "Authlib",
    "django-captcha"
]

version = "0.0.1"

[dependency-groups]
dev = [
    "livereload",
    "sst",
    "coverage",
    "django-silk==5.1.0",
    "pre-commit==3.8.0",
    "black==24.4.2",
    "requests-mock==1.12.1",
    "django-vite",
]

[tool.setuptools]
packages = ["bcap"]
