[build-system]
requires = [ "setuptools>=77", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "bcap"
version = "1.0.0a1"
readme = "README.md"
requires-python = ">=3.11"
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "arches @ git+https://github.com/bcgov/arches@dev/8.1.x_bcgov",
    "arches-component-lab==0.0.1a9",
    "arches-controlled-lists @ git+https://github.com/archesproject/arches-controlled-lists@dev/1.1.x",
    "arches-querysets",
    "authlib",
    "bcgov-arches-common @ git+https://github.com/bcgov/bcgov-arches-common@release/2.1.x",
    "boto3==1.26",
    "django-captcha",
    "django-migrate-sql-deux==1.1.1",
    "django-pgtrigger==4.15.2",
    "django-storages==1.13",
    "html2text",
    "oracledb",
    "python-dotenv",
    "redis",
]
dynamic = []

[project.license]
text = "GNU AGPL3"

[tool.setuptools]
packages = [ "bcap",]

[dependency-groups]
dev = [
    "livereload",
    "sst",
    "coverage",
    "django-silk==5.1.0",
    "pre-commit==3.8.0",
    "black==24.4.2",
    "requests-mock==1.12.1",
    "django-vite",
]
